--- a/ManagePeople.Web/Views/Shared/_Layout.cshtml
+++ b/ManagePeople.Web/Views/Shared/_Layout.cshtml
@@ -56,29 +56,30 @@
 
                 <div class="form-box register">
                     <h2>Register</h2>
-                    <form action="#">
+                    
                         <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="mail"></ion-icon>
                             </span>
-                            <input type="email" required />
+                            <input id="usernameTxt" type="email" required />
                             <label>Username</label>
                         </div>
                         <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="lock-closed"></ion-icon>
                             </span>
-                            <input type="password" required />
+                            <input id="passwordTxt" type="password" required />
                             <label>Password</label>
                         </div>
                         <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="lock-closed"></ion-icon>
                             </span>
-                            <input type="password" required />
+                            <input id="confirmTxt" type="password" required />
                             <label>Confirm</label>
                         </div>
-                        <button class="site-login-btn" type="submit"> Register</button>
+                        <div class="d-none" id="error-label" style="color:red; font-weight: bold;"> Passwords does not match<br/></div>
+                        <button id="site-login-btn" class="site-login-btn" type="submit"> Register</button>
 
                         <div class="login-register">
                             <p class="login-link">
@@ -86,7 +87,7 @@
                                 <a href="#">Login</a>
                             </p>
                         </div>
-                    </form>
+                   
                 </div>
             </div>
             @RenderBody()
