Registration basic form validations

--- a/ManagePeople.Web/Views/Shared/_Layout.cshtml
+++ b/ManagePeople.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 </span>
                 <div class="form-box login">
                     <h2>Login</h2>
-                    <form action="#">
+                    
                         <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="mail"></ion-icon>
@@ -51,7 +51,7 @@
                                 <a href="#">Register</a>
                             </p>
                         </div>
-                    </form>
+                    
                 </div>
 
                 <div class="form-box register">
@@ -77,9 +77,10 @@
                             </span>
                             <input id="confirmTxt" type="password" required />
                             <label>Confirm</label>
+                        <p id="error-label" style="color:red; font-weight: bold;"></p>
                         </div>
-                        <div class="d-none" id="error-label" style="color:red; font-weight: bold;"> Passwords does not match<br/></div>
-                        <button id="site-login-btn" class="site-login-btn" type="submit"> Register</button>
+                        
+                        <button id="site-login-btn" class="site-login-btn" type="button"> Register</button>
 
                         <div class="login-register">
                             <p class="login-link">
