--- a/ManagePeople.Web/Views/Shared/_Layout.cshtml
+++ b/ManagePeople.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
                 <a class="site-link" href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
-                <button class="login-btn">Persons</button>
+                <button id="persons-btn" class="login-btn">Persons</button>
             </nav>
     </header>
 
@@ -33,17 +33,18 @@
                             <span class="icon">
                                 <ion-icon name="mail"></ion-icon>
                             </span>
-                            <input type="email" required />
+                            <input id="log-usernameTxt" type="email" required />
                             <label>Username</label>
                         </div>
                         <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="lock-closed"></ion-icon>
                             </span>
-                            <input type="password" required />
+                            <input id="log-passwordTxt" type="password" required />
                             <label>Password</label>
+                        <p id="log-error-label" style="color:red; font-weight: bold;"></p>
                         </div>
-                        <button class="site-login-btn" type="submit"> Login</button>
+                        <button id="site-login-btn" class="site-login-btn" type="button"> Login</button>
 
                         <div class="login-register">
                             <p class="register-link">
@@ -80,7 +81,7 @@
                         <p id="error-label" style="color:red; font-weight: bold;"></p>
                         </div>
                         
-                        <button id="site-login-btn" class="site-login-btn" type="button"> Register</button>
+                        <button id="site-register-btn" class="site-login-btn" type="button"> Register</button>
 
                         <div class="login-register">
                             <p class="login-link">
@@ -98,7 +99,12 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/js/shared.js" asp-append-version="true"></script>
+    <script src="~/js/register.js" asp-append-version="true"></script>
+    <script src="~/js/login.js" asp-append-version="true"></script>
+
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
