--- a/ManagePeople.Web/wwwroot/css/site.css
+++ b/ManagePeople.Web/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-/*html {
+html {
   font-size: 14px;
 }
 
@@ -19,10 +19,10 @@ html {
 
 body {
   margin-bottom: 60px;
-}*/
+}
 
 *{
-    margin: 0 auto;
+    margin: 0 ;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
