--- a/ManagePeople.Web/Views/Shared/_Layout.cshtml
+++ b/ManagePeople.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-            <h2>Logo</h2>
+            <a href="#">
+            <img src="~/img/nhlanhla-dev.png" width="50" height="50" alt="logo"/>
+            </a>
             <nav class="navigation">
                 <a class="site-link" href="#">Home</a>
                 <a href="#">About</a>
