--- a/ManagePeople.Web/Views/Shared/_Layout.cshtml
+++ b/ManagePeople.Web/Views/Shared/_Layout.cshtml
@@ -9,14 +9,15 @@
 </head>
 <body>
     <header>
-            <a href="#">
+            <a href="@Url.Action("Index", "Home")">
             <img src="~/img/nhlanhla-dev.png" width="50" height="50" alt="logo"/>
             </a>
             <nav class="navigation">
-                <a class="site-link" href="#">Home</a>
+                <a class="site-link" href="@Url.Action("Index", "Home")">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
-                <button id="persons-btn" class="login-btn">Persons</button>
+                <a id="persons-link" href="@Url.Action("Index", "Person")">Persons</a>
+                <button id="login-btn" class="login-btn">Login</button>
             </nav>
     </header>
 
