--- a/ManagePeople.Web/Views/Person/Index.cshtml
+++ b/ManagePeople.Web/Views/Person/Index.cshtml
@@ -16,6 +16,7 @@
                         <th>Name</th>
                         <th>Surname</th>
                         <th>Id Number</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
