Person get by code implemented

--- a/ManagePeople.Web/Views/Person/Edit.cshtml
+++ b/ManagePeople.Web/Views/Person/Edit.cshtml
@@ -1,1 +1,9 @@
-﻿<h1>EDITT</h1>
+﻿@model ManagePeople.ViewModels.Person.PersonViewModel
+
+<div class="container-fluid">
+    <h1>EDITT</h1>
+    @Html.BeginForm("Edit", "Person", FormMethod.Post)
+    {
+
+    }
+</div>
