--- a/ManagePeople.Web/Views/Person/Index.cshtml
+++ b/ManagePeople.Web/Views/Person/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<div style="margin-top: 5%;" class="container-fluid">
+<div class="container-fluid site-content-container">
 
     <div class="card">
       <div class="card-header">
@@ -15,7 +15,7 @@
                     <tr>
                         <th>Name</th>
                         <th>Surname</th>
-                        <th>Id Number</th>
+                        <th>Identity Number</th>
                         <th>Action</th>
                     </tr>
                 </thead>
